--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
-    "cors": "^2.8.5"
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.10"
   },
   "keywords": [
     "nodejs",
